<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
            android:layout_above="@id/tv_login"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_medium_extra_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/iv_register_logo"
                android:src="@drawable/library"
                android:scaleType="centerCrop"
                android:contentDescription="@string/text_app_logo"
                android:layout_width="@dimen/logo_width_and_size"
                android:layout_height="@dimen/logo_width_and_size"/>

    </android.support.v7.widget.CardView>

    <TextView
            android:id="@+id/tv_login"
            android:text="@string/text_login"
            style="@style/BlackShadow"
            android:layout_above="@id/rl_middle"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:textSize="@dimen/margin_medium_large"
            android:layout_height="wrap_content"/>

    <RelativeLayout
            android:id="@+id/rl_middle"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_user_name"
                android:layout_width="match_parent"
                android:hint="@string/text_email"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/tit_login_user_name"
                    android:textColorHint="@color/primary_text"
                    android:layout_width="match_parent"
                    android:drawablePadding="@dimen/padding_medium_small"
                    android:textSize="@dimen/text_medium"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_person_outline_primary_color_24dp"
                    android:singleLine="true"
                    android:layout_height="match_parent"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_password"
                android:layout_width="match_parent"
                android:layout_below="@id/til_login_user_name"
                android:hint="@string/text_password"
                android:layout_marginTop="@dimen/margin_medium_small"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/tit_login_password"
                    android:singleLine="true"
                    android:textColorHint="@color/primary_text"
                    android:drawablePadding="@dimen/padding_medium_small"
                    android:textSize="@dimen/text_medium"
                    android:drawableStart="@drawable/ic_lock_outline_primary_color_24dp"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="match_parent"/>

        </android.support.design.widget.TextInputLayout>

        <CheckBox
                android:id="@+id/cb_login_show_password"
                android:text="@string/text_show_password"
                android:layout_below="@id/til_login_password"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btn_login"
                android:text="@string/text_login"
                android:textStyle="bold"
                android:layout_below="@id/cb_login_show_password"
                android:textAllCaps="false"
                android:textSize="@dimen/text_medium"
                android:background="@color/colorPrimaryTransparent"
                android:foreground="@drawable/ripple"
                android:layout_marginTop="@dimen/margin_medium_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"/>

    </RelativeLayout>

    <TextView
            android:layout_above="@id/rl_bottom"
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:text="@string/text_forget_password"
            android:textSize="@dimen/text_medium"
            android:layout_centerHorizontal="true"
            android:textColor="@color/primary_text"
            android:layout_height="wrap_content"/>

    <RelativeLayout
            android:id="@+id/rl_bottom"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/create_account"
                android:id="@+id/tv_have_an_account"
                android:textSize="@dimen/text_medium"
                android:layout_marginTop="@dimen/margin_medium_small"
                android:textColor="@color/primary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_login_register"
                android:text="@string/text_register"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                android:textColor="@color/primary_black"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_toEndOf="@id/tv_have_an_account"
                android:layout_alignBottom="@id/tv_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

</RelativeLayout>