<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/book_detail_app_bar"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
                android:id="@+id/book_detail_tool_bar"
                android:layout_width="match_parent"
                app:title="@string/app_name"
                app:navigationIcon="?attr/homeAsUpIndicator"
                style="@style/BlackShadow"
                android:layout_height="match_parent">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="?attr/actionBarSize">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/iv_book_detail_cover"
                    android:layout_width="match_parent"
                    android:src="@drawable/books_old_reading"
                    android:scaleType="centerCrop"
                    android:foreground="@drawable/ripple"
                    android:clickable="true"
                    android:layout_height="@dimen/book_detail_cover_height"
                    android:contentDescription="@string/text_book_cover"
                    android:focusable="true"/>

            <TextView
                    android:id="@+id/tv_book_detail_name"
                    android:text="@string/books_name"
                    android:paddingEnd="@dimen/padding_tiny"
                    android:paddingStart="@dimen/padding_zero"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"
                    android:textIsSelectable="true"
                    android:textColor="@color/primary_black"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_below="@id/iv_book_detail_cover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tv_book_detail_author_name"
                    android:layout_below="@id/tv_book_detail_name"
                    android:text="@string/book_author_name"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/primary_black"
                    android:layout_alignStart="@id/tv_book_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:textIsSelectable="true"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tv_book_detail_isbn"
                    android:layout_below="@id/tv_book_detail_author_name"
                    android:text="@string/text_isbn"
                    android:textSize="@dimen/text_medium"
                    android:layout_alignStart="@id/tv_book_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textIsSelectable="true"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_black"/>

            <TextView
                    android:id="@+id/tv_book_detail_edition"
                    android:layout_below="@id/tv_book_detail_isbn"
                    android:text="Edition : First Edition"
                    android:textSize="@dimen/text_medium"
                    android:layout_alignStart="@id/tv_book_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textIsSelectable="true"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_black"/>

            <TextView
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_below="@id/tv_book_detail_edition"
                    android:layout_alignStart="@id/tv_book_detail_name"
                    android:id="@+id/tv_book_detail_text"
                    android:textSize="@dimen/text_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:lineSpacingMultiplier="1.2"
                    tools:text="@string/demo_text"
                    android:textColor="@color/primary_text"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/padding_tiny"
                    android:textIsSelectable="true"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>

    </ScrollView>

    <Button
            android:id="@+id/btn_book_detail_read"
            android:background="@color/colorPrimaryDarkTransparent"
            android:textAllCaps="false"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:text="@string/text_read"/>

</android.support.design.widget.CoordinatorLayout>