<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_medium_small"
        android:layout_marginLeft="@dimen/margin_medium_small"
        android:layout_height="wrap_content">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="match_parent"
                android:id="@+id/iv_primary_book_cover"
                android:scaleType="centerCrop"
                android:src="@drawable/books_glasses_vase"
                android:clickable="true"
                android:foreground="@drawable/ripple"
                android:layout_height="@dimen/primary_image_height"
                android:contentDescription="@string/text_book_cover"
                android:focusable="true"/>

        <ImageView
                android:id="@+id/fab_primary_book_mark"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:background="@color/colorPrimaryTransparent"
                android:src="@drawable/ic_bookmark_border_black_24dp"
                android:layout_width="wrap_content"
                android:padding="@dimen/padding_medium"
                android:foreground="@drawable/ripple"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:contentDescription="@string/text_bookmark"/>

        <TextView
                android:text="@string/books_name"
                android:id="@+id/tv_primary_book_name"
                android:layout_above="@+id/tv_primary_book_author_name"
                android:textSize="@dimen/text_large"
                android:layout_marginStart="@dimen/margin_medium_small"
                android:textStyle="bold"
                style="@style/BlackShadow"
                android:textAllCaps="false"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/book_author_name"
                android:id="@+id/tv_primary_book_author_name"
                android:layout_alignBottom="@+id/iv_primary_book_cover"
                android:textSize="@dimen/text_medium"
                style="@style/BlackShadow"
                android:layout_marginStart="@dimen/margin_medium_small"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_small"
                android:textAllCaps="false"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap"/>

        <TextView
                android:layout_width="wrap_content"
                android:text="@string/book_number"
                android:singleLine="true"
                android:layout_below="@id/iv_primary_book_cover"
                android:id="@+id/tv_primary_book_number"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium_small"
                android:textSize="@dimen/text_medium"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_below="@+id/tv_primary_book_number"
                android:layout_marginTop="@dimen/margin_medium_small"
                android:textSize="@dimen/text_medium"
                android:layout_alignStart="@id/tv_primary_book_number"
                android:text="@string/demo_text"
                android:layout_marginEnd="@dimen/margin_medium"
                android:textColor="@color/primary_black"
                android:lineSpacingMultiplier="1.1"
                android:id="@+id/tv_primary_book_description"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:background="@color/defaultColorTransparent"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_below="@id/tv_primary_book_description"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_height="wrap_content" android:baselineAligned="false">

            <FrameLayout
                    android:id="@+id/fl_primary_book_download"
                    android:layout_marginTop="@dimen/margin_medium_small"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:background="@color/defaultColorTransparent"
                    android:focusable="true"
                    android:foreground="@drawable/ripple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                        android:layout_gravity="center"
                        android:id="@+id/btn_primary_book_download"
                        android:background="@android:color/transparent"
                        android:textAllCaps="false"
                        android:layout_width="wrap_content"
                        android:clickable="false"
                        android:drawablePadding="@dimen/padding_small"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_eye_black_24dp"
                        android:textSize="@dimen/text_medium"
                        android:text="@string/text_download"/>

            </FrameLayout>

            <FrameLayout
                    android:id="@+id/fl_primary_book_read"
                    android:layout_marginTop="@dimen/margin_medium_small"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:background="@color/defaultColorTransparent"
                    android:focusable="true"
                    android:foreground="@drawable/ripple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                        android:layout_gravity="center"
                        android:id="@+id/btn_primary_book_read"
                        android:background="@android:color/transparent"
                        android:textAllCaps="false"
                        android:layout_width="wrap_content"
                        android:clickable="false"
                        android:drawablePadding="@dimen/padding_small"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_eye_black_24dp"
                        android:textSize="@dimen/text_medium"
                        android:text="@string/text_read"/>

            </FrameLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>