<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_medium_small"
        android:layout_marginRight="@dimen/margin_medium_small"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/iv_secondary_book_cover"
                android:src="@drawable/books_old_reading"
                android:layout_width="@dimen/width_secondary_book_cover"
                android:scaleType="centerCrop"
                android:foreground="@drawable/ripple"
                android:clickable="true"
                android:layout_height="@dimen/secondary_book_cover_height"
                android:contentDescription="@string/text_book_cover"
                android:focusable="true"/>

        <TextView
                android:id="@+id/tv_secondary_book_name"
                android:layout_toEndOf="@id/iv_secondary_book_cover"
                android:layout_marginTop="@dimen/margin_medium_small"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/books_name"
                android:singleLine="true"
                android:textSize="@dimen/text_large"
                android:textColor="@color/primary_black"
                android:textStyle="bold"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:id="@+id/tv_secondary_book_author_name"
                android:layout_alignStart="@id/tv_secondary_book_name"
                android:layout_below="@id/tv_secondary_book_name"
                android:text="@string/book_author_name"
                android:textSize="@dimen/text_medium"
                android:paddingTop="@dimen/padding_small"
                android:textColor="@color/primary_text"
                android:singleLine="true"
                android:ellipsize="end"
                android:textStyle="bold"
                android:paddingEnd="@dimen/padding_small"
                android:paddingStart="@dimen/padding_zero"
                android:paddingBottom="@dimen/padding_small"
                android:layout_marginStart="@dimen/margin_medium_small"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_secondary_book_description"
                android:layout_alignStart="@id/tv_secondary_book_name"
                android:paddingTop="@dimen/padding_tiny"
                android:paddingBottom="@dimen/padding_tiny"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/demo_text"
                android:lineSpacingMultiplier="1.2"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium"
                android:textSize="@dimen/text_medium"
                android:layout_below="@id/tv_secondary_book_author_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                    android:layout_marginTop="@dimen/margin_medium_small"
                    android:id="@+id/btn_secondary_book_read"
                    android:textAllCaps="false"
                    android:background="@color/defaultColorTransparent"
                    android:layout_toEndOf="@id/iv_secondary_book_cover"
                    android:focusable="true"
                    android:layout_alignBottom="@id/iv_secondary_book_cover"
                    android:foreground="@drawable/ripple"
                    android:layout_width="match_parent"
                    android:clickable="false"
                    android:drawablePadding="@dimen/padding_small"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:text="@string/text_read"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>